--- a/src/index.html
+++ b/src/index.html
@@ -19,64 +19,7 @@
                 <h1>Project 1</h1>
                 <button class="add-todo btn">Add Todo</button>
 
-                <div class="todos-container">
-                    <div class="item-container">
-                        <span class="circle"></span>
-                        <div class="text-container">
-                            <header class="todo-header">
-                                <div class="title">Todo 1</div>
-                                <div class="actions-container">
-                                    <div class="edit-btn">
-                                        <img class="svg" src="./assets/edit.svg" alt="edit svg">
-                                    </div>
-                                    <div class="delete-btn">
-                                        <img class="svg" src="./assets/delete.svg" alt="delete svg">
-                                    </div>
-                                </div>
-                            </header>
-                            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tempore voluptas numquam rem iste sequi consequuntur omnis debitis accusantium ad cupiditate, aperiam explicabo minus, sint iusto? Aperiam molestias ea perferendis!</div>
-                            <div class="duedate">02-11-25</div>
-                        </div>
-                    </div>
-
-                    <div class="item-container">
-                        <span class="circle"></span>
-                        <div class="text-container">
-                            <header class="todo-header">
-                                <div class="title">Todo 1</div>
-                                <div class="actions-container">
-                                    <div class="edit-btn">
-                                        <img class="svg" src="./assets/edit.svg" alt="edit svg">
-                                    </div>
-                                    <div class="delete-btn">
-                                        <img class="svg" src="./assets/delete.svg" alt="delete svg">
-                                    </div>
-                                </div>
-                            </header>
-                            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tempore voluptas numquam rem iste sequi consequuntur omnis debitis accusantium ad cupiditate, aperiam explicabo minus, sint iusto? Aperiam molestias ea perferendis!</div>
-                            <div class="duedate">02-11-25</div>
-                        </div>
-                    </div>
-
-                    <div class="item-container">
-                        <span class="circle"></span>
-                        <div class="text-container">
-                            <header class="todo-header">
-                                <div class="title">Todo 1</div>
-                                <div class="actions-container">
-                                    <div class="edit-btn">
-                                        <img class="svg" src="./assets/edit.svg" alt="edit svg">
-                                    </div>
-                                    <div class="delete-btn">
-                                        <img class="svg" src="./assets/delete.svg" alt="delete svg">
-                                    </div>
-                                </div>
-                            </header>
-                            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tempore voluptas numquam rem iste sequi consequuntur omnis debitis accusantium ad cupiditate, aperiam explicabo minus, sint iusto? Aperiam molestias ea perferendis!</div>
-                            <div class="duedate">02-11-25</div>
-                        </div>
-                    </div>
-                </div>
+                <div class="todos-container"></div>
 
                 <div class="modal" style="display: none;">
                     <form action="#" method="post">
@@ -94,9 +37,9 @@
                             </div>
                             <div class="priority">
                                 <div class="text">Priority</div>
-                                <button class="low">LOW</button>
-                                <button class="medium">MEDIUM</button>
-                                <button class="high">HIGH</button>
+                                <button type="button" id="low">LOW</button>
+                                <button type="button" id="medium">MEDIUM</button>
+                                <button type="button" id="high">HIGH</button>
                             </div>
 
                             <button type="submit" class="add-task btn">ADD TASK</button>
