--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,22 @@
     <main>
         <div class="sidebar">
             <button class="add-project btn">Add Project</button>
-            <ul class="project-list">
+            <div class="items">
+                <div class="home item">Home</div>
+                <div class="today item">Today</div>
+                <div class="week item">Week</div>
+                <div class="projects">
+                    <div class="title">Projects</div>
+                    <ul class="project-list">
              
-            </ul>
+                    </ul>
+                </div>
+            </div>
+            
         </div>
         <div class="content">
-                <h1>Project 1</h1>
-                <button class="add-todo btn">Add Todo</button>
+                <h1></h1>
+                <!-- <button class="add-todo btn">Add Todo</button> -->
 
                 <div class="todos-container"></div>
 
