Set printWidth to 100

--- a/src/index.html
+++ b/src/index.html
@@ -45,25 +45,16 @@
 
 							<div class="due-date">
 								<p>Due Date:</p>
-								<input
-									type="date"
-									name="duedate"
-									id="duedate"
-									required
-								/>
+								<input type="date" name="duedate" id="duedate" required />
 							</div>
 							<div class="priority">
 								<div class="text">Priority</div>
 								<button type="button" id="low">LOW</button>
-								<button type="button" id="medium">
-									MEDIUM
-								</button>
+								<button type="button" id="medium">MEDIUM</button>
 								<button type="button" id="high">HIGH</button>
 							</div>
 
-							<button type="submit" class="add-task btn">
-								ADD TASK
-							</button>
+							<button type="submit" class="add-task btn">ADD TASK</button>
 						</fieldset>
 					</form>
 				</div>
